--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.geoserver.extension</groupId>
+			<artifactId>gs-vectortiles</artifactId>
+			<version>2.22-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>no.ecc.vectortile</groupId>
+					<artifactId>java-vector-tile</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
 			<groupId>no.ecc.vectortile</groupId>
 			<artifactId>java-vector-tile</artifactId>
 			<version>1.3.23</version>
