--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<groupId>org.geotools.jdbc</groupId>
 			<artifactId>gt-jdbc-sqlserver</artifactId>
 			<version>${geotools.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.microsoft.sqlserver</groupId>
+      				<artifactId>mssql-jdbc</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -100,6 +106,14 @@
 			<artifactId>java-vector-tile</artifactId>
 			<version>1.3.23</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>9.4.1.jre11</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
